# gzip-size-cli

./: CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
