[package]
name = "gzip-size-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gzip-size"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bytesize = "1.1.0"
clap = { version = "3.1.8", features = ["derive"] }
flate2 = "1.0.22"
